[gd_scene load_steps=7 format=3 uid="uid://dvsruybqiyh7t"]

[ext_resource type="Theme" uid="uid://cmppt7l8qjl3e" path="res://themes/Ventanas.tres" id="1_0r0c1"]
[ext_resource type="Script" uid="uid://beu5hsem2ydob" path="res://scripts/logros_screen.gd" id="1_133ll"]
[ext_resource type="Script" uid="uid://dwmo4b40adtx3" path="res://scripts/logros_container.gd" id="1_tpsit"]
[ext_resource type="Theme" uid="uid://7o1ucgaksca5" path="res://themes/BarraArriba.tres" id="2_tpsit"]

[sub_resource type="InputEventAction" id="InputEventAction_133ll"]
action = &"close_window"

[sub_resource type="Shortcut" id="Shortcut_tpsit"]
events = [SubResource("InputEventAction_133ll")]

[node name="LogrosContainer" type="Panel"]
anchors_preset = -1
anchor_left = 0.489
anchor_top = 0.504
anchor_right = 0.489
anchor_bottom = 0.504
offset_left = -580.88
offset_top = -341.32
offset_right = 583.13
offset_bottom = 332.68
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0r0c1")
script = ExtResource("1_133ll")
metadata/_edit_vertical_guides_ = [940.0]
metadata/_edit_horizontal_guides_ = [540.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 5.0
offset_right = -4.01001
offset_bottom = 47.0
grow_horizontal = 2
theme = ExtResource("2_tpsit")

[node name="closebutton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -34.0
offset_top = 5.0
offset_right = -4.0
offset_bottom = 35.0
grow_horizontal = 2
theme = ExtResource("2_tpsit")
shortcut = SubResource("Shortcut_tpsit")
shortcut_in_tooltip = false
text = "x"
text_overrun_behavior = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.062
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.211998
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="LabelContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = -630

[node name="TitleLabel" type="Label" parent="MarginContainer/LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "archiv_menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollLogrosContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
script = ExtResource("1_tpsit")

[node name="LogrosContainer" type="GridContainer" parent="MarginContainer/ScrollLogrosContainer"]
layout_mode = 2
columns = 4

[connection signal="mouse_entered" from="Panel/closebutton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Panel/closebutton" to="." method="_on_closebutton_pressed"]
[connection signal="show_logro_popup" from="MarginContainer/ScrollLogrosContainer" to="." method="_on_scroll_logros_container_show_logro_popup"]
